[package]
name = "galoy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1", features = ["derive", "env"] }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.18", features = ["json"] }
graphql_client = { version = "0.13", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.0"
thiserror = "1.0.37"
rust_decimal = "1.27.0"
actix-web = "4.2.1"
actix-web-static-files = "4.0.0"
tera = "1.19.0"
log = "0.4.18"
static-files = "0.2.3"
webbrowser = "0.8.10"

[build-dependencies]
static-files = "0.2.3"