[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
galoy-client = { path = "../galoy-client" }
clap     = { version =  "3.2", features = ["derive", "env"] }
url = { version = "2.2.2", features = ["serde"] }
anyhow = "1.0.62"
log = "0.4.17"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
