[package]
name = "galoy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.143"
anyhow = "1.0.62"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
graphql_client = { version = "0.11.0", features = ["reqwest-blocking"] }
